--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,9 +1,16 @@
-$color-background:  #F5F7FB;
-$color-text:        #293264;
-$color-text-white:  #F5F7FB;
-$color-button:      #4D5B9E;
+$color-background:  #1B1C27;
+$color-text:        #8F90A7;
+$color-text-white:  #FAFAFC;
+$color-button:      #AC5CD9;
 $color-button-text: #F5F7FB;
-$color-button-over: #6e81e2;
+$color-button-over: #DEA5E8;
+$color-button-down: #6500CD;
+$color-button-alt:  #FEDD49;
+$color-button-alto: #FEED73;
+$color-button-altd: #FFCC00;
+$color-div:         #28293D;
+$color-red:         #FF3B3B;
+$color-green:       #05C270;
 
 $font-light:        100;
 $font-normal:       400;
