--- a/src/css/answer.css
+++ b/src/css/answer.css
@@ -1,15 +1,33 @@
+@import 'animate.css';
 .answer {
+  --animate-duration: 0.6s;
   width: 100%;
-  height: 2.4rem;
-  border: 2px solid #293264;
+  height: 2.8rem;
+  background-color: #AC5CD9;
   border-radius: 5px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   cursor: pointer;
-  color: #293264;
+  color: #FAFAFC;
+  font-weight: 100;
+  letter-spacing: 1px;
+  padding: 1rem;
+  transition: all 0.2s;
+}
+.answer__icon-container {
+  width: 10%;
+}
+.answer__answer-container {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .answer:hover, .answer:focus {
-  background-color: #293264;
-  color: #F5F7FB;
+  background-color: #DEA5E8;
+  color: #FAFAFC;
 }/*# sourceMappingURL=answer.css.map */
