--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,10 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@100;200;300;400;500;600;700;800&display=swap");
+@import 'animate.css';
 .button {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   margin-top: 1.8rem;
   width: 12.5rem;
   height: 3.25rem;
   border: none;
-  background-color: #4D5B9E;
+  background-color: #AC5CD9;
   border-radius: 15px;
   color: #F5F7FB;
   cursor: pointer;
@@ -18,7 +23,22 @@
   bottom: 2rem;
 }
 .button:hover {
-  background-color: #6e81e2;
+  background-color: #DEA5E8;
+}
+
+.small-button {
+  width: 2.8rem;
+  height: 2.8rem;
+  border: none;
+  background: #FFCC00;
+  border-radius: 50%;
+  color: #FAFAFC;
+  font-size: 1rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+.small-button:hover {
+  background: #FEED73;
 }
 
 body {
@@ -34,7 +54,7 @@ p {
 }
 
 h1 {
-  color: #293264;
+  color: #8F90A7;
   font-size: 2rem;
   font-weight: 700;
 }
@@ -51,19 +71,24 @@ h1 {
 }
 
 body {
-  background-color: #293264;
+  background-color: #1B1C27;
   position: relative;
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
-  max-width: 750px;
   margin: 0 auto;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.logo {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  width: 6.8rem;
 }
 
 .blob {
