--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,8 +1,11 @@
 .container {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  background-color: #28293D;
+  max-width: 750px;
   position: relative;
-  background-color: #F5F7FB;
   width: 90%;
-  height: 40vh;
+  height: 24rem !important;
+  min-width: 30rem;
   border-radius: 10px;
   padding: 2rem;
   display: grid;
@@ -10,36 +13,60 @@
   grid-template-rows: 1fr;
   gap: 24px 24px;
   grid-template-areas: ". .";
-  color: #293264;
+  color: #8F90A7;
 }
 .container__question-number {
+  text-align: left;
   position: absolute;
   left: 2rem;
   top: 2rem;
-  font-weight: 100;
-  color: #293264;
+  font-weight: 500;
+  color: #FEDD49;
+}
+.container__question-number__category {
+  position: absolute;
+  top: 2.4rem;
+  right: 2.6rem;
+  text-align: right;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #FEDD49;
 }
 .container__question-number__emphasize {
-  font-size: 1.5rem;
-  color: #4D5B9E;
-  font-weight: 700;
+  font-size: 2rem;
+  color: #FEDD49;
+  font-weight: 100;
 }
 .container__question {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
+  padding-top: 3.8rem;
 }
 .container__question h2 {
-  color: #293264;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: #FAFAFC;
   text-align: left;
   font-size: 1.5rem;
-  line-height: 1.6rem;
-  font-weight: 700;
+  line-height: 2rem;
+  font-weight: 100;
 }
 .container__answer {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-end;
+  gap: 1.5rem;
   padding-right: 2rem;
+}
+
+.button-container {
+  position: absolute;
+  bottom: 2rem;
+  left: 2rem;
+  display: flex;
+  gap: 1rem;
 }/*# sourceMappingURL=container.css.map */
