--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@100;200;300;400;500;600;700;800&display=swap");
 body {
   font-family: "Karla", sans-serif;
 }
@@ -12,7 +12,7 @@ p {
 }
 
 h1 {
-  color: #293264;
+  color: #8F90A7;
   font-size: 2rem;
   font-weight: 700;
 }/*# sourceMappingURL=typography.css.map */
