--- a/src/scss/answer.scss
+++ b/src/scss/answer.scss
@@ -1,18 +1,36 @@
 @import './variables.scss';
+@import 'animate.css';
 
 .answer {
+    --animate-duration: 0.6s;
     width: 100%;
-    height: 2.4rem;
-    border:     2px solid $color-text;
+    height: 2.8rem;
+    background-color: $color-button;
     border-radius:      5px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     cursor: pointer;
-    color: $color-text;
+    color: $color-text-white;
+    font-weight: $font-light;
+    letter-spacing: 1px;
+    padding: 1rem;
+
+    transition:     all .2s;
+
+    &__icon-container {
+        width: 10%;
+    }
+
+    &__answer-container {
+        display: flex;
+        align-items: center;
+        width: 90%;
+        user-select:    none;
+    }
 
     &:hover, &:focus {
-        background-color: $color-text;
+        background-color: $color-button-over;
         color: $color-text-white;
     }
 }
