--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,8 @@
 @import './variables.scss';
 @import './controls.scss';
 @import './typography.scss';
+@import 'animate.css';
+
 * {
     box-sizing: border-box;
 }
@@ -13,22 +15,27 @@
 }
 
 body {
-    background-color:   $color-text;
+    background-color:   $color-background;
     position:           relative;
 }
 
 main {
-    height:             100vh;
+    min-height:             100vh;
     width:              100%;
 
-    max-width:          750px;
     margin:             0 auto;
-
-    overflow:           hidden;
 
     display:            flex;
     justify-content:    center;
     align-items:        center;
+}
+
+
+.logo {
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+    width: 6.8rem;
 }
 
 .blob {
